# calyx-libm

./: Cargo.toml  README.md  runt.toml
.github/workflows/: test.yml
crates/approx/: Cargo.toml
crates/approx/src/: addressing.rs  datapath.rs  faithful.rs  remez.rs
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  constants.rs  lib.rs  metadata.rs  parser.rs  printer.rs  syntax.pest
crates/ast_lowering/: Cargo.toml
crates/ast_lowering/src/: lib.rs  lowering.rs
crates/ast_lowering/src/analysis/: bindings.rs  call_graph.rs  passes.rs  type_check.rs
crates/backend/: Cargo.toml
crates/backend/src/: builder.rs  compile.rs  lib.rs  libm.rs  program.rs
crates/backend/src/components/: cast.rs  horner.rs  lookup.rs  manager.rs  mod.rs  polynomial.rs  rom.rs
crates/backend/src/ops/: iterative.rs  mod.rs  operator.rs  table.rs
crates/backend/src/stdlib/: importer.rs  library.rs  primitives.rs
crates/dfg/: Cargo.toml
crates/dfg/src/: dfg.rs  lib.rs
crates/dfg_passes/: Cargo.toml
crates/dfg_passes/src/: builder.rs  dfg_passes.rs  lib.rs
crates/dfg_passes/src/ops/: mod.rs  operator.rs  table.rs
crates/hir/: Cargo.toml
crates/hir/src/: context.rs  hir.rs  index.rs  ir.rs  lib.rs  metadata.rs  sollya.rs  visitor.rs
crates/hir_passes/: Cargo.toml
crates/hir_passes/src/: manager.rs  visitor.rs
crates/hir_passes/src/analysis/: domain.rs  ranges.rs
crates/hir_passes/src/transform/: constant_propagation.rs  mod.rs  operator_coalescing.rs  univariate_promotion.rs
crates/macros/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: diagnostics.rs  format.rs  interface.rs  interval.rs  lib.rs  mangling.rs  sollya.rs
primitives/: numbers.futil  numbers.sv
src/: lib.rs  main.rs  opts.rs
src/backend/: compile.rs  libm.rs
src/backend/components/: cast.rs  constant.rs  horner.rs  lookup.rs  manager.rs  polynomial.rs
src/backend/stdlib/: primitives.rs
src/hir/: mod.rs
src/lowering/: lower.rs  mod.rs
src/lowering/analysis/: passes.rs  type_check.rs
src/passes/: manager.rs  visitor.rs
src/passes/analysis/: ranges.rs
src/passes/transform/: constant_propagation.rs  univariate_promotion.rs
tests/errors/backend/: overflow.expect  overflow.fpcore  unknown_domain.expect  unknown_domain.fpcore  unknown_impl.expect  unknown_impl.fpcore
tests/errors/frontend/: already_defined.expect  already_defined.fpcore  cycle.expect  cycle.fpcore  undefined_operator.expect  undefined_operator.fpcore  undefined_variable.expect  undefined_variable.fpcore
tests/expressions/: call_comb.expect  call_comb.fpcore  call_seq.expect  call_seq.fpcore  literals.expect  literals.fpcore
tests/expressions/if/: comb.expect  comb.fpcore  seq.expect  seq.fpcore
tests/expressions/let/: mixed_types.expect  mixed_types.fpcore  simultaneous_comb.expect  simultaneous_comb.fpcore  simultaneous_seq.expect  simultaneous_seq.fpcore  star_comb.expect  star_comb.fpcore  star_seq.expect  star_seq.fpcore
tests/expressions/operations/: combinations.expect  combinations.fpcore  transitive.expect  transitive.fpcore  variadic.expect  variadic.fpcore
tests/expressions/while/: seq_condition.expect  seq_condition.fpcore  simultaneous.expect  simultaneous.fpcore  star.expect  star.fpcore
tools/fud/: fpcore.rhai  stage.py
tools/fuzz/: main.py  rand.py
(+24 files in other folders)
