[package]
name = "calyx-libm"
version.workspace = true
edition.workspace = true

[dependencies]
argh.workspace = true

calyx-libm-approx.workspace = true
calyx-libm-ast.workspace = true
calyx-libm-ast-lowering.workspace = true
calyx-libm-backend.workspace = true
calyx-libm-hir.workspace = true
calyx-libm-hir-passes.workspace = true
calyx-libm-utils.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
argh = "0.1"
calyx-frontend = "0.6.0"
calyx-ir = "0.6.0"
calyx-utils = "0.6.0"
codespan-reporting = "0.11"
cranelift-entity = "0.123"
itertools = "0.11"
malachite = "0.4"
pest = "2"
pest_derive = "2"
pest_consume = "1"
pretty = "0.12"
smallvec = "1"
strum = "0.27"
strum_macros = "0.27"
symbol_table = { version = "0.3", features = ["global"] }

calyx-libm-approx = { path = "crates/approx" }
calyx-libm-ast = { path = "crates/ast" }
calyx-libm-ast-lowering = { path = "crates/ast_lowering" }
calyx-libm-backend = { path = "crates/backend" }
calyx-libm-hir = { path = "crates/hir" }
calyx-libm-hir-passes = { path = "crates/hir_passes" }
calyx-libm-macros = { path = "crates/macros" }
calyx-libm-utils = { path = "crates/utils" }
