[package]
name = "calyx-libm-ast"
version.workspace = true
edition.workspace = true

[dependencies]
malachite.workspace = true
pest.workspace = true
pest_derive.workspace = true
pest_consume.workspace = true
pretty = { workspace = true, optional = true }
strum.workspace = true
strum_macros.workspace = true
symbol_table.workspace = true
